# everest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bake_everest.cmd  bake_libs.sh  update_submodules.sh
cmakes/: linux.cmake  win32.cmake
src/: app.cpp  app.hpp  assets.rc  fields.cpp  fields.hpp  frame.cpp  frame.hpp  main.hpp  richtext.cpp  text.cpp  text.hpp  try._sh
